--- a/EvoSim/EvoSim.csproj
+++ b/EvoSim/EvoSim.csproj
@@ -9,4 +9,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ParticlePhysics\ParticlePhysics.csproj" />
+  </ItemGroup>
+
 </Project>
